
Thanks to Christoph Reichenbach <creichen@gmail.com> for the 
following:
* Fix computer planes not shooting when tailing the player's plane.
* Add -d option to specify level to start on.
* Fix planes crashing into their own bullets

v1.7.1

Fix some compilation errors due to an error in swinit.c
Fix networking which got broken somewhere.

v1.7.0

Allow control via arrow keys, for people with "unusual" keyboard layouts
Fix right-ctrl for ctrl-c (thanks to electricelf)
Support Gtk+ 2.0 and some GNOME HiGification

Psion Port:
	devfs support
	improved screen squishing for revo
Code cleanup:
	Removed a load of redundant code including the last remnants of
		the old Imaginet code. Also some archaic stuff like the 
		ATARI/IBMPC defines
	Some of the keyboard code moved out into a system-independent
		module.

v1.6.0

Fixed bug with harry keys mode and returning to home from the left
(thanks to Kodath duMatri)
Fixed bullets being colored (instead of always white like they should be)
Now totally under the GPL!

v1.5.0

Removed old redundant collision detection code
PsiLinux port: 	Keyboard code added, video code improved. This port is now
		playable!
Fixed gtk+ port turning off key repeat
Fixed SDL version drawing a blank screen on changing video modes
Fixed consistency failure with flocks between clients with different screen
	widths
renamed "getmode" to "getgamemode" to avoid conflicts with standard unix
function (thanks to Edwin Groothuis)
SDL Icon is now set from the internal sprite table, not from an external
file (no more "icon.bmp not found" errors)
Added manual page

v1.4.0 (29/06/2002)

Start of PsiLinux port (for Psion Revo/5MX)
Collision detection code rewritten
Save button added to settings dialog in Gtk+ version
Added original documentation to doc/origdoc.txt
Code restructure: All rendering is now done directly to the appropriate buffer,
		  the old Atari rendering functions (which I thought were CGA