@@ -1,0 +1,19 @@
+
+If the "medals" game option is turned on, you may be rewarded with medals
+for the following:
+
+ * Shooting down 5 planes
+ * Shooting down 25 planes (difficult!)
+ * Three successful raids
+ * Finishing a level with no planes lost
+ * Gaining 25 points in a single flight, where 3 points are awarded per plane
+   and 4 per building
+ * As above, a second time
+ * Returning to base after having been damaged
+ * Gaining a certain amount of points for destroyed planes and buildings; the
+   points depend on whether the player was damaged at that point in time, and
+   how far away the destroyed object was from the player's base
+ * As above, but a few more points
+
+All medals and counters for these are reset once a plane is destroyed.
+
